feat: Add sitemap, robots.txt, and Open Graph meta tags to enhance SEO.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 
     <!-- Open Graph / Social Media -->
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://g8studio.id" />
     <meta property="og:title" content="G8 Studio | Interior Design & HPL Material Partner" />
     <meta property="og:description"
         content="Premium interior design solutions and high-quality HPL materials for your dream space in Bandung." />
+    <meta property="og:image" content="https://g8studio.id/og-image.jpg" />
     <meta property="og:site_name" content="G8 Studio" />
     <meta property="og:locale" content="en_US" />
 
